applications/n8n/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: web
      port: 5678
      targetPort: 5678
      protocol: TCP
